[project]
name = "rv32i-440"
version = "0.1.0"
description = ""
authors = [
    {name = "Matthew Dobley",email = "mkmshopping@sbcglobal.net"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "sphinx (>=8.2.3,<9.0.0)"
]

[tool.poetry]
packages = [{include = "rv32i_440", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
